add create device api
